--- a/Dockerfile.nexusbuild
+++ b/Dockerfile.nexusbuild
@@ -12,6 +12,7 @@ RUN apk add --no-cache curl xmlstarlet
 RUN SNAPSHOT=$(curl -u ${NEXUS_USER}:${NEXUS_PASS} \
       ${REPO_URL}/${GROUP_ID}/${ARTIFACT_ID}/${JAR_VERSION}/maven-metadata.xml \
       | xmlstarlet sel -t -v "//snapshotVersion[extension='jar']/value") \
+ && echo "Resolved SNAPSHOT: ${SNAPSHOT}" \
  && curl -u ${NEXUS_USER}:${NEXUS_PASS} \
       -o app.jar \
       "${REPO_URL}/${GROUP_ID}/${ARTIFACT_ID}/${JAR_VERSION}/${ARTIFACT_ID}-${SNAPSHOT}.jar"
