--- a/Dockerfile.nexusbuild
+++ b/Dockerfile.nexusbuild
@@ -1,6 +1,8 @@
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-
+# Replace with your Nexus repo URL and artifact coordinates
+ARG NEXUS_USER
+ARG NEXUS_PASS
 ARG JAR_VERSION=0.0.1-SNAPSHOT
 ARG GROUP_ID=com/example
 ARG ARTIFACT_ID=portfolio-app
